Fix best lap number alignment

--- a/css/event.css
+++ b/css/event.css
@@ -596,7 +596,8 @@ main {
 .green-sec,
 .red-sec,
 .purple-sec,
-.yellow-sec {
+.yellow-sec,
+.dummy-sec {
   padding: 2px 4px;
   border-radius: 4px;
 }
